--- a/i18n/locales/en/techniques.json
+++ b/i18n/locales/en/techniques.json
@@ -2,7 +2,7 @@
   "techniques": {
     "breathing": {
       "name": "2-Minute Breathing",
-      "short_description": "Simple breathing exercises that calm your nervous system and reduce anxiety in just minutes",
+      "short_description": "Simple breathing exercise that calm your nervous system and reduce anxiety in just minutes",
       "description": "When anxiety strikes, your breathing becomes shallow and rapid. This technique teaches you simple breathing patterns that activate your body's natural relaxation response. By focusing on slow, controlled breaths, you can quickly calm your nervous system and regain control over anxious feelings.",
       "duration": "2-3 min"
     },
