--- a/i18n/locales/en/techniques.json
+++ b/i18n/locales/en/techniques.json
@@ -39,7 +39,7 @@
     "stressReliefBubbles": {
       "name": "Stress Relief Bubbles",
       "short_description": "Interactive bubble-popping activity that redirects anxious energy into playful, repetitive motion",
-      "description": "Sometimes the best way to deal with anxiety is through gentle distraction and play. This interactive activity provides a simple, repetitive action that helps redirect nervous energy while giving your mind a break from anxious thoughts. The satisfying pop of virtual bubbles can help reset your mood and provide quick relief.",
+      "description": "Sometimes the best way to deal with anxiety is through gentle distraction and play. This simple interactive activity helps redirect nervous energy while giving your mind a break from anxious thoughts.",
       "duration": "2-5 min"
     },
     "soundTherapy": {
