Russian organization links and possible sentry exceptions fixes

--- a/i18n/locales/ru/pages.json
+++ b/i18n/locales/ru/pages.json
@@ -33,27 +33,27 @@
     },
     "organizations": {
       "title": "Организации по психическому здоровью",
-      "description": "Ведущие организации с проверенной информацией о тревоге и депрессии:",
+      "description": "Ведущие организации, предоставляющие научно обоснованную информацию и ресурсы по тревоге и депрессии:",
       "list": [
         {
-          "name": "Anxiety & Depression Association of America (ADAA)",
-          "url": "https://adaa.org",
-          "description": "Международная организация по профилактике, лечению и изучению тревоги и депрессии. Предоставляет вебинары, материалы и каталог терапевтов."
+          "name": "Союз охраны психического здоровья",
+          "url": "https://mental-health-russia.ru/",
+          "description": "Общероссийская организация, объединяющая специалистов и активно работающая над формированием благоприятной среды для охраны психического здоровья населения, развитием образования и науки в этой сфере."
         },
         {
-          "name": "National Institute of Mental Health (NIMH)",
-          "url": "https://www.nimh.nih.gov/health/topics/anxiety-disorders",
-          "description": "Федеральное агентство исследований психического здоровья с авторитетной информацией о тревожных расстройствах и методах лечения."
+          "name": "Российское Общество Психиатров (РОП)",
+          "url": "https://psychiatr.ru/",
+          "description": "Профессиональная организация, объединяющая психиатров, наркологов, психотерапевтов и медицинских психологов, направленная на совершенствование психиатрической помощи и защиту прав пациентов."
         },
         {
-          "name": "Mental Health America (MHA)",
-          "url": "https://www.mhanational.org/",
-          "description": "НКО, предлагающее бесплатные тесты, практические ресурсы и советы по психическому здоровью."
+          "name": "Благотворительный фонд «Просто люди»",
+          "url": "https://psyprosvet.ru/",
+          "description": "Ресурс, созданный для людей с психическими расстройствами и их близких, предоставляющий достоверную информацию о психиатрии и психологии, действенные техники самопомощи и бесплатную анонимную психологическую поддержку."
         },
         {
-          "name": "American Psychological Association (APA)",
-          "url": "https://www.apa.org/topics/anxiety",
-          "description": "Научная организация с подробной информацией о лечении тревоги, терапии и экспертными рекомендациями."
+          "name": "Благотворительный фонд «Равновесие»",
+          "url": "https://fond-ravnovesie.ru/",
+          "description": "Благотворительный фонд, оказывающий комплексную поддержку взрослым (от 18 лет) людям с психическими и поведенческими расстройствами, помогая им достичь стабильного состояния и создать поддерживающее сообщество."
         }
       ]
     }
