Add BDD project

--- a/i18n/locales/en/pages.json
+++ b/i18n/locales/en/pages.json
@@ -97,6 +97,9 @@
       "tmuxCheatsheet": {
         "name": "Tmux Cheat Sheet",
         "description": "Quick tmux reference"
+      },
+      "freeSubStats": {
+        "name": "FreeSubStats"
       }
     }
   }
