--- a/i18n/locales/zh/pages.json
+++ b/i18n/locales/zh/pages.json
@@ -1,72 +1,72 @@
 {
   "about": {
-    "title": "理解焦虑",
+    "title": "深入了解焦虑",
     "whatHappens": {
-      "title": "焦虑时会发生什么",
-      "description": "您的身体激活了“战斗或逃跑”反应，增加心率，加快呼吸，并释放压力激素，如肾上腺素。这通常在日常生活中不必要的触发，让您感到紧张不安。"
+      "title": "焦虑时身体的反应",
+      "description": "身体会激活\"战斗或逃跑\"应激反应，导致心率加快、呼吸急促，并释放肾上腺素等压力激素。这种反应在日常生活中往往被不必要地触发，让您感到紧张不安。"
     },
     "howHelp": {
-      "title": "这些技术如何帮助",
-      "description": "这些基于证据的技术激活您的副交感神经系统，自然对抗压力反应。定期练习可以减少焦虑感的频率和强度。"
+      "title": "舒缓技巧的作用原理",
+      "description": "这些经过科学验证的技巧能够激活副交感神经系统，自然地对抗身体的应激反应。通过定期练习，可以显著减少焦虑情绪的发生频率和强度。"
     },
     "tips": {
-      "title": "最佳结果的提示",
+      "title": "获得最佳效果的建议",
       "items": [
-        "找到一个安静、舒适的空间，不会被打扰",
-        "如果您感到非常焦虑，请从较短的技术（2-5分钟）开始",
-        "定期练习，即使您不焦虑，也可以建立您的技能",
-        "对自己要有耐心——这些技术随着练习而变得更容易"
+        "选择一个安静舒适、不受干扰的练习空间",
+        "如果您正处于高度焦虑状态，建议从较短的练习（2-5分钟）开始",
+        "即使在心情平静时也要坚持练习，以提升应对技能",
+        "对自己保持耐心——这些技巧会随着练习变得更加熟练有效"
       ]
     }
   },
   "resources": {
-    "title": "额外资源",
+    "title": "专业资源与支持",
     "professional": {
       "title": "何时寻求专业帮助",
-      "description": "如果焦虑严重影响您的日常生活、工作或人际关系，请考虑寻求心理健康专业人士的帮助。",
+      "description": "当焦虑严重影响您的日常生活、工作表现或人际关系时，建议寻求心理健康专业人士的帮助。",
       "signs": [
-        "焦虑发作频繁或严重",
-        "您避免重要活动",
-        "身体症状持续存在",
-        "睡眠或食欲显著受到影响"
+        "焦虑发作频繁或程度严重",
+        "开始回避重要的日常活动",
+        "身体不适症状持续存在",
+        "睡眠质量或食欲明显受到影响"
       ]
     },
     "organizations": {
-      "title": "心理健康组织",
-      "description": "提供基于证据的信息和资源，用于焦虑和抑郁：",
+      "title": "权威心理健康机构",
+      "description": "以下机构提供经过科学验证的焦虑与抑郁相关信息和专业资源：",
       "list": [
         {
-          "name": "焦虑和抑郁协会（ADAA）",
+          "name": "焦虑与抑郁协会（ADAA）",
           "url": "https://adaa.org",
-          "description": "国际非营利组织，致力于预防、治疗和治愈焦虑、抑郁和相关疾病。提供教育内容、网络研讨会和治疗师目录。"
+          "description": "国际性非营利组织，专注于焦虑、抑郁及相关疾病的预防、治疗与康复。提供专业教育内容、在线研讨会和治疗师资源目录。"
         },
         {
           "name": "国家心理健康研究所（NIMH）",
           "url": "https://www.nimh.nih.gov/health/topics/anxiety-disorders",
-          "description": "提供权威的基于证据的信息，用于焦虑障碍和治疗。"
+          "description": "提供权威的循证医学信息，涵盖焦虑症的诊断、治疗和最新研究进展。"
         },
         {
           "name": "美国心理健康协会（MHA）",
           "url": "https://www.mhanational.org/",
-          "description": "社区非营利组织，提供免费筛查工具、实用资源和心理健康对话指导。"
+          "description": "社区服务型非营利组织，提供免费心理健康筛查工具、实用资源和心理健康对话指导。"
         },
         {
           "name": "美国心理学会（APA）",
           "url": "https://www.apa.org/topics/anxiety",
-          "description": "提供深入的焦虑治疗、治疗选项和专家见解的信息。"
+          "description": "提供焦虑症治疗方法、干预选择和专家见解的深度专业信息。"
         }
       ]
     }
   },
 
   "footer": {
-    "title": "焦虑援助工具",
-    "description": "免费的开源工具，帮助您在需要时找到平静。",
-    "disclaimer": "本网站提供一般焦虑信息，并非专业医疗建议、诊断或治疗的替代品。始终咨询医疗保健提供者以持续的焦虑。",
+    "title": "焦虑工具集",
+    "description": "免费开源的身心舒缓工具，助您在需要时重获内心平静。",
+    "disclaimer": "本网站提供焦虑相关的一般性信息，不能替代专业医疗建议、诊断或治疗。如有持续性焦虑问题，请务必咨询专业医疗人员。",
     "contribute": {
-      "title": "贡献",
+      "title": "参与贡献",
       "github": "GitHub",
-      "discussions": "讨论"
+      "discussions": "社区讨论"
     }
   }
 }
