Fix Chinese translations

--- a/i18n/locales/zh/exercises.json
+++ b/i18n/locales/zh/exercises.json
@@ -63,7 +63,7 @@
         "description": "延长的呼气过程向身体发出信号，提示放缓节奏并进入放松状态。"
       },
       "science": {
-        "title": "呼吸的科学依据",
+        "title": "呼吸练习的科学依据",
         "description": "研究表明，<a href=\"https://pubmed.ncbi.nlm.nih.gov/36480101/\" target=\"_blank\" rel=\"nofollow\" class=\"text-purple-600 underline hover:text-purple-800\">膈肌呼吸</a>能够降低皮质醇水平和心率变异性，研究发现在健康成年人中可减少压力标志物高达20%。一项针对术后患者的临床试验报告显示，使用4-7-8呼吸法后焦虑评分下降了15%。",
         "research": {
           "cortisol": {
@@ -258,7 +258,7 @@
       },
       "stability": {
         "title": "即刻稳定",
-        "description": "结构化的步骤序列（例如5个可见物、4个可触物等）在精神混乱时给予你具体的关注点，防止进一步陷入焦虑状态。",
+        "description": "结构化的步骤序列（例如 5 个可见物、4 个可触物等）在精神混乱时给予你具体的关注点，防止进一步陷入焦虑状态。",
         "grounding": "这种技巧通过将你与当前的物理环境和现实连接，提供即刻的安全感。"
       }
     },
@@ -490,11 +490,11 @@
       "physiology": "这种技巧运用了一个天然的生理机制：当肌肉强烈收缩后，它会自然地放松到比静息状态更深的程度。这种反弹效应能够帮助你达到仅靠意志力难以实现的深度放松状态。通过系统性地练习不同肌肉群，确保全身都能从这种放松反应中获益。",
       "awareness": "渐进性肌肉放松法还有助于打破慢性肌肉紧张的恶性循环，这种情况在焦虑症患者中十分常见。许多人会在不知不觉中紧张肩膀、下颌或腹部肌肉。通过系统性地练习每个肌肉群，你能够培养更强的身体觉察力，学会在紧张感累积之前就将其释放。",
       "tension": {
-        "title": "5秒紧张阶段",
+        "title": "10 秒紧张阶段",
         "description": "有意识地紧张肌肉能够提高身体觉察力，为深层放松做好准备。"
       },
       "release": {
-        "title": "15秒释放阶段",
+        "title": "10 秒释放阶段",
         "description": "延长的放松时间让肌肉达到比正常基准更深的休息状态。"
       }
     },
@@ -955,7 +955,7 @@
       }
     },
     "science": {
-      "title": "平静视觉化的科学依据",
+      "title": "视觉化练习的科学依据",
       "description": "根据10项研究的系统性回顾，<a href=\"https://pubmed.ncbi.nlm.nih.gov/39845426/\" target=\"_blank\" rel=\"nofollow\" class=\"text-purple-600 underline hover:text-purple-800\">引导意象疗法</a>能使手术患者的围手术期焦虑水平降低18%。基于自然场景的视觉化技术通过激活放松反应来减少状态性焦虑，皮质醇水平可下降15%。",
       "research": {
         "effectiveness": {
