--- a/i18n/locales/zh/meta.json
+++ b/i18n/locales/zh/meta.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "home": {
-      "title": "开源焦虑工具集",
+      "title": "开源焦虑舒缓工具集",
       "description": "社区开发的焦虑缓解工具，涵盖呼吸练习、正念接地法和肌肉放松技巧。"
     },
     "breathing": {
