--- a/i18n/locales/zh/pages.json
+++ b/i18n/locales/zh/pages.json
@@ -55,7 +55,7 @@
   },
 
   "footer": {
-    "title": "焦虑工具集",
+    "title": "焦虑舒缓工具集",
     "description": "免费开源的身心舒缓工具，助您在需要时重获内心平静。",
     "disclaimer": "本网站提供焦虑相关的一般性信息，不能替代专业医疗建议、诊断或治疗。如有持续性焦虑问题，请务必咨询专业医疗人员。",
     "contribute": {
