Audie cues - 2-min breathing

--- a/i18n/locales/en/exercises.json
+++ b/i18n/locales/en/exercises.json
@@ -1,5 +1,8 @@
 {
   "breathing": {
+    "audio": {
+      "enableCues": "Enable audio cues"
+    },
     "benefits": {
       "calm": {
         "title": "Calm",
