--- a/i18n/locales/fr/exercises.json
+++ b/i18n/locales/fr/exercises.json
@@ -1,5 +1,8 @@
 {
   "breathing": {
+    "audio": {
+      "enableCues": "Activer les signaux audio"
+    },
     "benefits": {
       "calm": {
         "title": "Calme",
