--- a/i18n/locales/he/exercises.json
+++ b/i18n/locales/he/exercises.json
@@ -1,5 +1,8 @@
 {
   "breathing": {
+    "audio": {
+      "enableCues": "אפשר אותות קוליים"
+    },
     "benefits": {
       "calm": {
         "title": "רוגע",
