--- a/i18n/locales/nl/exercises.json
+++ b/i18n/locales/nl/exercises.json
@@ -1,5 +1,8 @@
 {
   "breathing": {
+    "audio": {
+      "enableCues": "Audio-signalen inschakelen"
+    },
     "benefits": {
       "calm": {
         "title": "Kalmte",
