--- a/i18n/locales/ru/exercises.json
+++ b/i18n/locales/ru/exercises.json
@@ -1,5 +1,8 @@
 {
   "breathing": {
+    "audio": {
+      "enableCues": "Включить звуковые сигналы"
+    },
     "benefits": {
       "calm": {
         "title": "Спокойствие",
