--- a/i18n/locales/zh/exercises.json
+++ b/i18n/locales/zh/exercises.json
@@ -1,5 +1,8 @@
 {
   "breathing": {
+    "audio": {
+      "enableCues": "启用音频提示"
+    },
     "benefits": {
       "calm": {
         "title": "冷静",
