--- a/i18n/locales/fr/exercises.json
+++ b/i18n/locales/fr/exercises.json
@@ -824,7 +824,7 @@
   },
   "peacefulVisualization": {
     "interface": {
-      "beginExercise": "Commencer {sceneName}",
+      "play": "Jouer",
       "skip": "Passer",
       "changeScene": "Changer de scène",
       "stop": "Arrêter",
