--- a/i18n/locales/pt/exercises.json
+++ b/i18n/locales/pt/exercises.json
@@ -824,7 +824,7 @@
   },
   "peacefulVisualization": {
     "interface": {
-      "beginExercise": "Iniciar {sceneName}",
+      "play": "Reproduzir",
       "skip": "Pular",
       "changeScene": "Mudar cena",
       "stop": "Parar",
