--- a/i18n/locales/ru/exercises.json
+++ b/i18n/locales/ru/exercises.json
@@ -824,7 +824,7 @@
   },
   "peacefulVisualization": {
     "interface": {
-      "beginExercise": "Начать {sceneName}",
+      "play": "Воспроизвести",
       "skip": "Пропустить",
       "changeScene": "Сменить сцену",
       "stop": "Остановить",
