--- a/i18n/locales/nl/exercises.json
+++ b/i18n/locales/nl/exercises.json
@@ -824,7 +824,7 @@
   },
   "peacefulVisualization": {
     "interface": {
-      "beginExercise": "Begin {sceneName}",
+      "play": "Afspelen",
       "skip": "Overslaan",
       "changeScene": "Verander Scene",
       "stop": "Stop",
