--- a/i18n/locales/fr/navigation.json
+++ b/i18n/locales/fr/navigation.json
@@ -18,7 +18,8 @@
     "description": "Outils gratuits pour vous aider lorsque vous vous sentez anxieux. Ces exercices sont simples à suivre et ne nécessitent aucun équipement particulier, utilisez-les dès que votre esprit est trop agité ou lorsque vous avez besoin d'un moment de calme."
   },
   "breadcrumb": {
-    "backToHome": "Retour à l'accueil"
+    "backToHome": "Retour à l'accueil",
+    "back": "Retour"
   },
   "relatedTechniques": {
     "title": "À essayer ensuite",
