--- a/i18n/locales/he/navigation.json
+++ b/i18n/locales/he/navigation.json
@@ -18,7 +18,8 @@
     "description": "כלים חינמיים שיעזרו לך כשאתה מרגיש חרדה. התרגילים פשוטים לביצוע ואינם דורשים ציוד מיוחד – השתמש בהם בכל עת כשהמחשבות מציפות אותך או כשאתה זקוק לרגע של רוגע."
   },
   "breadcrumb": {
-    "backToHome": "חזור לדף הבית"
+    "backToHome": "חזור לדף הבית",
+    "back": "חזור"
   },
   "relatedTechniques": {
     "title": "נסה גם את אלו",
