--- a/i18n/locales/ru/navigation.json
+++ b/i18n/locales/ru/navigation.json
@@ -18,7 +18,8 @@
     "description": "Бесплатные инструменты, которые помогают при тревожности. Простые упражнения, не требующие специального оборудования — используйте их, когда ум перегружен или нужен момент спокойствия."
   },
   "breadcrumb": {
-    "backToHome": "На главную"
+    "backToHome": "На главную",
+    "back": "Назад"
   },
   "relatedTechniques": {
     "title": "Попробуйте эти техники",
