--- a/i18n/locales/en/pages.json
+++ b/i18n/locales/en/pages.json
@@ -67,6 +67,9 @@
       "title": "Contribute",
       "github": "GitHub",
       "discussions": "Discussions"
-    }
+    },
+    "privacy": "Privacy",
+    "terms": "Terms",
+    "support": "Support"
   }
 }
