--- a/i18n/locales/he/meta.json
+++ b/i18n/locales/he/meta.json
@@ -39,6 +39,18 @@
     "stressBall": {
       "title": "כדור לחץ אינטראקטיבי - גרור וזרוק לשחרור חרדה",
       "description": "משחק וירטואלי של כדור לחץ אינטראקטיבי. גרירה, זריקה וקפיצה לשחרור מיידי של מתח וניהול חרדה. כלי טיפולי חינמי."
+    },
+    "privacy": {
+      "title": "מדיניות פרטיות - Anxiety Aid Tools",
+      "description": "מדיניות פרטיות עבור Anxiety Aid Tools. למד כיצד אנו מגנים על הנתונים שלך עם אנליטיקס מינימלית ואחסון מקומי בלבד."
+    },
+    "terms": {
+      "title": "תנאי שימוש - Anxiety Aid Tools",
+      "description": "תנאי שימוש עבור Anxiety Aid Tools. אפליקציה לניהול חרדה בקוד פתוח ברישיון GPL."
+    },
+    "support": {
+      "title": "תמיכה - Anxiety Aid Tools",
+      "description": "קבל עזרה עם Anxiety Aid Tools. שאלות נפוצות, פרטי יצירת קשר ופתרון בעיות עבור אפליקציית ניהול החרדה שלנו."
     }
   }
 }
