--- a/i18n/locales/ru/meta.json
+++ b/i18n/locales/ru/meta.json
@@ -39,6 +39,18 @@
     "stressBall": {
       "title": "Интерактивный антистрессовый мяч",
       "description": "Виртуальный антистрессовый мяч. Тяните, бросайте и отбивайте для мгновенного снятия стресса и контроля тревожности. Бесплатный терапевтический инструмент."
+    },
+    "privacy": {
+      "title": "Политика конфиденциальности - Anxiety Aid Tools",
+      "description": "Политика конфиденциальности Anxiety Aid Tools. Узнайте, как мы защищаем ваши данные с минимальной аналитикой и локальным хранением."
+    },
+    "terms": {
+      "title": "Условия использования - Anxiety Aid Tools",
+      "description": "Условия использования Anxiety Aid Tools. Приложение для управления тревожностью с открытым исходным кодом под лицензией GPL."
+    },
+    "support": {
+      "title": "Поддержка - Anxiety Aid Tools",
+      "description": "Получите помощь с Anxiety Aid Tools. FAQ, контактная информация и устранение неполадок для нашего приложения по управлению тревожностью."
     }
   }
 }
